++++++++++++

- Running Zope on Windows is not yet supported in this alpha release.
  More specifically the generated startup scripts need to be adjusted,
  while the code itself should work fine.

- ZODB 3.9.0a11 does not work on Windows with Python 2.6 yet.

- There is no old-style full tarball release that resembles the prior
  releases of Zope at this point.

Restructuring
+++++++++++++

- Made the specification of `SOFTWARE_HOME` and `ZOPE_HOME` optional. In
  addition `INSTANCE_HOME` is no longer required to run the tests of a
  source checkout of Zope.

- Removed the `test` command from zopectl. The test.py script it was relying
  on does no longer exist.

- Updated to ZODB 3.9.0a11. ZODB-level version support has been
  removed and ZopeUndo now is part of Zope2.

- The Zope2 SVN trunk is now a buildout pulling in all dependencies as
  actual released packages and not SVN externals anymore.

- Make use of the new zope.container and zope.site packages.

- Updated to newer versions of zope packages. Removed long deprecated
  layer and skin ZCML directives.

- Disabled the XML export on the UI level - the export functionality
  however is still available on the Python level.

- No longer show the Help! links in the ZMI, if there is no help
  available. The help system depends on the product registry.

- Updated the quick start page and simplified the standard content.
  The default index_html is now a page template.

- Removed deprecated Draft and Version support from Products.OFSP.
  Also removed version handling from the control panel. Versions are
  no longer supported on the ZODB level.

- Removed left-overs of the deprecated persistent product distribution
  mechanism.

- The persistent product registry is not required for starting Zope
  anymore. `enable-product-installation` can be set to off if you don't
  rely on the functionality provided by the registry.

- ZClasses have been deprecated for two major releases. They have been