@@ -1,8 +1,5 @@
-@set ZOPE_HOME=<<ZOPE_HOME>>
+@set PYTHON=<<PYTHON>>
 @set INSTANCE_HOME=<<INSTANCE_HOME>>
-@set PYTHON=%ZOPE_HOME%\bin\python.exe
-@set SOFTWARE_HOME=%ZOPE_HOME%\lib\python
 @set CONFIG_FILE=%INSTANCE_HOME%\etc\zope.conf
-@set PYTHONPATH=%SOFTWARE_HOME%
-@set ZOPE_RUN=%SOFTWARE_HOME%\Zope2\Startup\run.py
+@set ZOPE_RUN=<<ZOPE2PATH>>\Zope2\Startup\run.py
 "%PYTHON%" "%ZOPE_RUN%" -C "%CONFIG_FILE%" %1 %2 %3 %4 %5 %6 %7
